Fixed spacing with the h3 heading

--- a/app/assets/stylesheets/stores/intersport-finland.scss
+++ b/app/assets/stylesheets/stores/intersport-finland.scss
@@ -55,6 +55,7 @@
         }
         h3 {
           font-size: $font-size-base;
+          margin-top: 0.5em;
           margin-bottom: 0.25em;
         }
         h4 {
