--- a/app/assets/stylesheets/stores/tikkurila.scss
+++ b/app/assets/stylesheets/stores/tikkurila.scss
@@ -66,6 +66,7 @@
         }
         h3 {
           font-size: $font-size-base;
+          margin-top: 0.5em;
           margin-bottom: 0.25em;
         }
         h4 {
